--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Food site</title>
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="/index.css
 </head>
 
 <body class="body">
