Added dots before images

--- a/index.html
+++ b/index.html
@@ -27,35 +27,35 @@
 
     <section class="foodlist">
         <div class="food">
-            <img src="/images/WhatsApp Image 2025-04-10 at 10.16.15 AM.jpeg" alt="Pizza">
+            <img src="./images/WhatsApp Image 2025-04-10 at 10.16.15 AM.jpeg" alt="Pizza">
             <p>PIZZA-"A delicious blend of crispy crust, rich tomato sauce, melted cheese, and your favorite toppings—a slice of pure satisfaction!"</p>
         </div>
         <div class="food">
-            <img src="/images/WhatsApp Image 2025-04-10 at 10.28.53 AM.jpeg" alt="BURGER">
+            <img src="./images/WhatsApp Image 2025-04-10 at 10.28.53 AM.jpeg" alt="BURGER">
             <p>BURGER-A mouthwatering stack of a juicy patty, fresh veggies, melty cheese, and a soft toasted bun</p>
         </div>
         <div class="food">
-            <img src="/images/WhatsApp Image 2025-04-10 at 10.28.54 AM.jpeg" alt="CHICKEN">
+            <img src="./images/WhatsApp Image 2025-04-10 at 10.28.54 AM.jpeg" alt="CHICKEN">
             <p>CHICKEN-Tender, juicy chicken seasoned to perfection and cooked golden brown — bursting with flavor in every bite</p>
         </div>
         <div class="food">
-            <img src="/images/WhatsApp Image 2025-04-10 at 10.28.56 AM.jpeg" alt="BREAD">
+            <img src="./images/WhatsApp Image 2025-04-10 at 10.28.56 AM.jpeg" alt="BREAD">
             <p>BREAD-Soft, fluffy, and freshly baked — the perfect companion to any meal or a warm bite on its own</p>
         </div>
         <div class="food">
-            <img src="/images/WhatsApp Image 2025-04-10 at 10.28.55 AM.jpeg" alt="UGALI">
+            <img src="./images/WhatsApp Image 2025-04-10 at 10.28.55 AM.jpeg" alt="UGALI">
             <p>UGALI-A hearty, wholesome maize meal staple — simple, satisfying, and perfect with your favorite stew or greens</p>
         </div>
         <div class="food">
-            <img src="/images/WhatsApp Image 2025-04-10 at 10.28.55 AM (1).jpeg" alt="BEEF STEW">
+            <img src="./images/WhatsApp Image 2025-04-10 at 10.28.55 AM (1).jpeg" alt="BEEF STEW">
             <p>BEEF STEW-Tender chunks of beef simmered to perfection in a flavorful, savory broth with spices and vegetables — comfort in every bite!</p>
         </div>
         <div class="food">
-            <img src="/images/WhatsApp Image 2025-04-10 at 12.17.17 PM (1).jpeg" alt="STEAK">
+            <img src="./images/WhatsApp Image 2025-04-10 at 12.17.17 PM (1).jpeg" alt="STEAK">
             <p>STEAK-Juicy, perfectly grilled steak with a crispy crust on the outside and tender, flavorful meat inside — a carnivore’s dream!</p>
         </div>
         <div class="food">
-            <img src="/images/WhatsApp Image 2025-04-10 at 12.17.17 PM.jpeg" alt="FISH">
+            <img src="./images/WhatsApp Image 2025-04-10 at 12.17.17 PM.jpeg" alt="FISH">
             <p>FISH-Delicately seasoned and perfectly cooked, this tender fish offers a light, flaky texture with every bite — a true oceanic delight!</p>
         </div>
 
